--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@rill/active",
-  "description": "Get the active Rill context using continuation local storage.",
-  "version": "0.4.1",
+  "description": "Get the active Rill context using Zone.js.",
+  "version": "0.5.0",
   "author": "Dylan Piercey <pierceydylan@gmail.com>",
-  "browser": "client/index.js",
   "bugs": "https://github.com/rill-js/active/issues",
   "dependencies": {
     "dot-prop": "^4.1.1",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "rill": "^4.1.1",
-    "snazzy": "^6.0.0",
-    "standard": "^9.0.2",
+    "rill": "^4.3.3",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.1",
     "supertest": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
@@ -30,7 +29,7 @@
     "universal"
   ],
   "license": "MIT",
-  "main": "server/index.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/rill-js/active"
